Fixed few measurements gone wrong on mobile 📐

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -147,7 +147,7 @@
             margin-top: 8rem;
             width: 78vw;
             button {
-                min-width: 120px !important;            
+                min-width: 70px !important;            
             }
         }
 
